--- a/package.json
+++ b/package.json
@@ -15,15 +15,22 @@
   },
   "license": "MIT",
   "author": "Vasishth@29",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "bin": {
-    "outside" : "bin/outside"
+    "outside": "bin/outside"
   },
   "scripts": {
     "dev": "nodemon index.js"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "dependencies": {
+    "bencode": "^4.0.0",
+    "buffer": "^6.0.3",
+    "dgram": "^1.0.1",
+    "fs": "^0.0.1-security",
+    "url": "^0.11.4"
   }
 }
