add a peer tracker to get all the url or locations of the peers

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "outside": "bin/outside"
   },
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "nodemon tracker.js"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
